Added function to draw, undraw, move, rotate functions for terminoes

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
             <div class="grid">
 
                 <div class="block"></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
+                <div>1</div>
+                <div>2</div>
+                <div>3</div>
+                <div>4</div>
+                <div>5</div>
                 <div></div>
                 <div></div>
                 <div></div>
@@ -225,7 +225,7 @@
                 <div class="end"></div>
                 <div class="end"></div>
                 <div class="end"></div>
-                
+
             </div>
 
         </div>
